Correct fixed collection bar position on small screens

--- a/src/public/less/components/index.less
+++ b/src/public/less/components/index.less
@@ -89,6 +89,10 @@
 	.collection {
 		&.affix {
 			top: 60px;
+
+			@media (max-width: @screen-xs-max) and (min-width: @grid-float-breakpoint) {
+				top: 127px;
+			}
 		}
 	}
 
