--- a/src/public/less/components/shared/collection.less
+++ b/src/public/less/components/shared/collection.less
@@ -13,7 +13,7 @@
 		left: 0;
 
 		@media (max-width: @screen-xs-max) and (min-width: @grid-float-breakpoint) {
-			top: 127px;
+			top: 184px;
 		}
 	}
 
